# solidlua

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/solidlua/: CMakeLists.txt  include_lua.h  include_solid.h  main.cpp
src/solidlua/10.0.9638/glue/: glue.cpp  glue.h
src/solidlua/10.0.9638/solidsdk/: SolidFramework.cpp  SolidFramework.h
